Sat May 19 19:04:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (command_output): ENCOBJS is needed for all linked
	  ruby, if --disable-shared and --with-static-linked-ext.

	* ext/extmk.rb (command_output): dmyext is needed as DLDOBJS if no
	  static lined extensions.

	* Makefile.in, common.mk (PROGRAM): no extension libraries.

	* common.mk (build-ext): pass macros for libruby.so.

	* ext/extmk.rb (command_output): link extension libraries and encoding
	  libraries into libruby.so, not ruby executable.

	* ext/extmk.rb (command_output): fold long macro lines.

	* Makefile.in (LIBEXT): add macro.

	* configure.in (ENCOBJS, EXTOBJS): use LIBEXT, not hardcoded suffix.

	* Makefile.in (LIBRUBY_A): fix typo.  re-applying r35242.

Sat May 19 04:46:53 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/openssl/extconf.rb: Use Logging::message instead of message.
	* ext/zlib/extconf.rb: ditto.

Fri May 18 18:13:44 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#configuration): keep space at end of
	  OUTFLAG and COUTFLAG.  [ruby-dev:45650]

Fri May 18 17:39:42 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (rb_thread_create_timer_thread): Added error
	  check when failing fcntl(). [Bug #6147] [ruby-dev:45364]

Fri May 18 17:41:00 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): link archives only, skip script only
	  extension libraries.

Fri May 18 17:25:33 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c: bump up fiber machine stack size when running on 64bit
	  arch. [Bug #6344] [ruby-dev:45554]

Fri May 18 15:20:56 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic.build): duplicate args before adding
	  new items. (don't change arguments)

	* lib/uri/generic.rb (URI::Generic.build): use URI::Generic::COMPONENT
	  if this method is called from URI::Generic.
